<resources>
    <string name="app_name">Get Techie</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="password_should_be_atleast_8_characters_long">Password should be atleast 8 characters long</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="input_your_email_address">Input your email address</string>
    <string name="email_address">Email Address</string>
    <string name="log_in_">LOG IN</string>
    <string name="input_your_password">Input your password</string>
    <string name="todo">TODO</string>
    <string name="todo_">TODO</string>
    <string name="todo__">TODO</string>
    <string name="remember_me">Remember me</string>

    <string name="facebook_app_id">4823654827740439</string>
    <string name="fb_login_protocol_scheme">fb4823654827740439</string>
    <string name="facebook_client_token">f0b5186efdd726bffd52e40a525c41f1</string>
    <string name="create_a_new_password">Create a new password?</string>
    <string name="Createpssnote">Your new password must be different from your previous used password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignuplogIn">Log in</string>
    <string name="loginsign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="Privacy1">Welcome to kodecamp.Our Privacy Policy governs your visit to Kodecamp, and explains how we collect, safeguard and disclose information that results from your use of our Service.We use your data to provide and improve Service. By using Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions. Our Terms and Conditions (“Terms”) govern all use of our Service and together with the Privacy Policy constitutes your agreement with us (“agreement”).</string>
    <string name="privacy2">We collect several different types of information for various purposes to provide and improve our Service to you.</string>
    <string name="privacy2_1">While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you (“Personal Data”). Personally identifiable information may include, but is not limited to: 0.1. Email address 0.2. First name and last name 0.3. Phone number 0.4. Address, Country, State, Province, ZIP/Postal code, City We may use your Personal Data to contact you with newsletters, marketing or promotional materials and other information that may be of interest to you. You may opt out of receiving any, or all, of these communications from us by following the unsubscribe link. Location Data We may use and store information about your location if you give us permission to do so (“Location Data”). We use this data to provide features of our Service, to improve and customize our Service. You can enable or disable location services when you use our Service at any time by way of your device settings.</string>
    <string name="privacy3">Kodecamp uses the collected data for purposes like: To prvide and maintain our service. to notify you about changes to our Service, to allow you participate inn interactive features of our Service when you choose to do so, to detect, prevent and address technical issues.</string>
    <string name="privacy4">We will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies. We will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period, except when this data is used to strengthen the security or to improve the functionality of our Service, or we are legally obligated to retain this data for longer time periods.</string>
    <string name="privacy5">If you have any questions about this Privacy Policy, please contact us: kodecampteam@gmail.com +234 (0)8109507906</string>
    <string name="shareText">The KodeCamp community is open to all individuals that are looking to learn a tech skill. We will love you to invite your friends to learn any skill they want.</string>
</resources>