<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andoroid="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PrivacyFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:context=".fragments.PrivacyFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fullMenuBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            andoroid:layout_constraintEnd_toStartOf="@+id/textView5"
            andoroid:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="Privacy Policy"
            android:textSize="24dp"
            android:textStyle="bold"
            andoroid:layout_constraintBottom_toTopOf="@+id/imageView9"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.155"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toTopOf="parent"
            andoroid:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:src="@drawable/frame"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Privacy Policy"
            android:textSize="22dp"
            android:textStyle="bold"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/imageView9" />


        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="1.  Introduction"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.0"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="346dp"
            android:layout_height="172dp"
            android:layout_marginTop="22dp"
            android:text="@string/Privacy1"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="2.  Collection of Personal Data"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.0"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="346dp"
            android:layout_height="32dp"
            android:layout_marginTop="17dp"
            android:text="@string/privacy2"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="2.1 Categories of Personal Data"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.01"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/privacy2_1"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="3. Use of Data"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.0"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/privacy3"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="4. Retention of Data"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.0"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/privacy4"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.457"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView19" />


        <TextView
            android:id="@+id/textView21"
            android:layout_width="95dp"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:text="5.  Contact us"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.006"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/privacy5"
            andoroid:layout_constraintEnd_toEndOf="parent"
            andoroid:layout_constraintHorizontal_bias="0.491"
            andoroid:layout_constraintStart_toStartOf="parent"
            andoroid:layout_constraintTop_toBottomOf="@+id/textView21" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
<!--    <include-->
<!--        layout="@layout/fragment_bottom_menu"-->
<!--        />-->
</FrameLayout>