<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordFragment">


    <TextView
        android:id="@+id/forgot_passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_detailsTV"
        android:layout_width="374dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_light"
        android:text="Please type your email below to help you reset your password."
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/forgot_passwordTV"
        app:layout_constraintTop_toBottomOf="@+id/forgot_passwordTV" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/email_detailsTV"
        app:layout_constraintTop_toBottomOf="@+id/email_detailsTV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditText"
        android:layout_width="376dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/edittext"
        android:hint="@string/input_your_email_address"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="16sp"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:inputType="none|textWebEmailAddress"
            android:paddingStart="20dp"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="377dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button"
        android:fontFamily="@font/open_sans_bold"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="#F8F7F7"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <TextView
        android:id="@+id/email_address_incorrectTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_light"
        android:text="Email address is incorrect!"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>